Perkin-UAT/force-app/main/default/objects/C_META_PKI_Countries__mdt/C_META_PKI_Countries__mdt.object-meta.xml
<CustomObject>
    <description>This is a clone of the PKI Countries from the custom object PKI_Countries__c. We store the meta here so that we can recreate the data quickly in SBX refreshes.  The data here will be synced using L.FLOW/M.ACTION</description>
    <label>C.META PKI Countries</label>
    <pluralLabel>C.META PKI Countries</pluralLabel>
</CustomObject>