Perkin-UAT/force-app/main/default/objects/C_META_PKI_Countries__mdt/fields/CountryISOAlpha2__c.field-meta.xml
<CustomField>
    <fullName>CountryISOAlpha2__c</fullName>
    <label>Country ISO Alpha 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>