Perkin-UAT/force-app/main/default/objects/C_META_PKI_Countries__mdt/fields/CountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>CountryISOCode__c</fullName>
    <label>Country ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>