Perkin-UAT/force-app/main/default/objects/C_META_PKI_Countries__mdt/fields/SubTerritory__c.field-meta.xml
<CustomField>
    <fullName>SubTerritory__c</fullName>
    <label>Sub Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>